--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+body, html {
+  height: 100vh;
+  width: 100vw
+}
+
+body {
+  background-image: url("https://s3-us-west-2.amazonaws.com/automail-custom-covers/trianglify.svg");
+  height: 76vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+
 .App {
   text-align: center;
 }
